src/objects/Program__c.object
<CustomObject>
    <description>An object for housing recruitment and academic program records. There are two record types: Recruitment Programs and Academic Programs.</description>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <description>Use for a shortened version of the program name</description>
        <label>Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Level__c</fullName>
        <inlineHelpText>Academic level for this program</inlineHelpText>
        <label>Academic Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Academic Program</description>
        <inlineHelpText>Lookup to Academic Program</inlineHelpText>
        <label>Academic Program Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs (Account)</relationshipLabel>
        <relationshipName>Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked if this program is currently active. Unchecked otherwise.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <inlineHelpText>Applicant type(s) this program applies to (applies to all if blank)</inlineHelpText>
        <label>Applicant Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIP_Code__c</fullName>
        <label>CIP Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <description>The Career that the Program belongs to (Ex: Undergraduate).</description>
        <inlineHelpText>Select a Career for the Program.</inlineHelpText>
        <label>Career</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <inlineHelpText>Citizenship type(s) this program applies to (applies to all if blank)</inlineHelpText>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Citizenship_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credentials__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credentials</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Credentials</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Programs (Credentials)</relationshipLabel>
        <relationshipName>Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <inlineHelpText>Degree type(s) this program applies to (applies to all if blank)</inlineHelpText>
        <label>Degree Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <inlineHelpText>The degree of this program (Ex: BS, BA, etc.)</inlineHelpText>
        <label>Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>BBA</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>EdD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <inlineHelpText>Delivery type(s) this program applies to (applies to all if blank)</inlineHelpText>
        <label>Delivery Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to Account to connect Programs to the Account hierarchy for departments, schools, and/or colleges. Filter criteria of Record Type = University Department.</description>
        <inlineHelpText>Enter the departmental account (i.e. School of Business) the Program belongs to.</inlineHelpText>
        <label>Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Academic and Recruitment Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of the program</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <description>The academic disciplines associated with the academic program</description>
        <externalId>true</externalId>
        <label>Discipline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disciplines__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disciplines</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Disciplines</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Programs (Disciplines)</relationshipLabel>
        <relationshipName>Programs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Academic_Level__c</fullName>
        <description>To be used for integration</description>
        <inlineHelpText>SIS data</inlineHelpText>
        <label>ERP Academic Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_GUID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GUID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Programs</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generic_Filter_1__c</fullName>
        <description>A generic filter included in EASY that can be re-purposed for an individual institutions&apos; needs.</description>
        <inlineHelpText>A generic filter included in EASY that can be re-purposed for an individual institutions&apos; needs.</inlineHelpText>
        <label>Generic Filter 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_Filter_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Filter_2__c</fullName>
        <description>A generic filter included in EASY that can be re-purposed for an individual institutions&apos; needs.</description>
        <inlineHelpText>A generic filter included in EASY that can be re-purposed for an individual institutions&apos; needs.</inlineHelpText>
        <label>Generic Filter 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_Filter_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Filter_3__c</fullName>
        <description>A generic filter included in EASY that can be re-purposed for an individual institutions&apos; needs.</description>
        <inlineHelpText>A generic filter included in EASY that can be re-purposed for an individual institutions&apos; needs.</inlineHelpText>
        <label>Generic Filter 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_Filter_3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_Applicant_Type__c</fullName>
        <inlineHelpText>Applicant type(s) that this program does not apply to (applies to all if blank)</inlineHelpText>
        <label>Hide Applicant Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_Citizenship__c</fullName>
        <inlineHelpText>Citizenship type(s) that this program does not apply to (applies to all if blank)</inlineHelpText>
        <label>Hide Citizenship</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Citizenship_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_Student_Type__c</fullName>
        <inlineHelpText>Student type(s) that this program does not apply to (applies to all if blank)</inlineHelpText>
        <label>Hide Student Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Student_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_from_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this field will not show up as an option on the application.</description>
        <inlineHelpText>If checked, this field will not show up as an option on the application.</inlineHelpText>
        <label>Hide from Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Levels</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Programs (Level)</relationshipLabel>
        <relationshipName>Programs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Applications_Limit__c</fullName>
        <description>One Application (Any other applications, don&apos;t allow creation)
One Application Per Term (Only one application for the selected term)
One Application Per Program (Only one application for the selected program)
One Application Per Term Per Program (Only one application for the selected term and selected program)
~Blank~ No Restrictions</description>
        <label>Number of Applications Limit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Application</fullName>
                </value>
                <value>
                    <fullName>One Application Per Term</fullName>
                </value>
                <value>
                    <fullName>One Application Per Program</fullName>
                </value>
                <value>
                    <fullName>One Application Per Term Per Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Credit_Hour_Multiplier__c</fullName>
        <description>Use this to multiply the Custom Metadata Credit Hour to get the Opportunity amount. Each Program has a different Credit Hour amount.</description>
        <inlineHelpText>Use this to multiply the Custom Metadata Credit Hour to get the Opportunity amount. Each Program has a different Credit Hour amount.</inlineHelpText>
        <label>Opportunity Credit Hour Multiplier</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Program_Amount__c</fullName>
        <formula>Opportunity_Credit_Hour_Multiplier__c * $CustomMetadata.Opportunity_Credit_Hour_Value__mdt.Standard_Credit.Opportunity_Credit_Hour_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Program Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <description>A checkbox to mark whether or not a Program is active.</description>
        <externalId>true</externalId>
        <inlineHelpText>External code for the program (e.g. SIS ID). This is used for integration with external systems.</inlineHelpText>
        <label>Program Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Name_on_Application__c</fullName>
        <inlineHelpText>Name of the program to display on the application</inlineHelpText>
        <label>Program Name on Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Educational Institution Units</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Programs (Program Owner)</relationshipLabel>
        <relationshipName>Programs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Record_Type__c</fullName>
        <label>Program Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recruitment Program</fullName>
                </value>
                <value>
                    <fullName>Academic Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <description>The type of Program such as a Major, Minor, etc.</description>
        <inlineHelpText>Select a Program Type for the Program.</inlineHelpText>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>Endorsement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An internal lookup filtered by Record Type = Recruitment Program to connect Academic Program record(s) to a Recruitment Program. This field only appears in the Academic Program page layout.</description>
        <inlineHelpText>Enter the Recruitment Program related to the Academic Program.</inlineHelpText>
        <label>Recruitment Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Academic Programs</relationshipLabel>
        <relationshipName>Academic_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Residency__c</fullName>
        <inlineHelpText>Residency type this program applies to (applies to all if blank)</inlineHelpText>
        <label>Residency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Residency_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <inlineHelpText>School/College this program is a part of</inlineHelpText>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sites</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ethos__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sites</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ethos__c</referenceTo>
        <relationshipLabel>Programs (Sites)</relationshipLabel>
        <relationshipName>Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <inlineHelpText>Student type(s) this program applies to (applies to all if blank)</inlineHelpText>
        <label>Student Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Student_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>Academic_Programs</fullName>
        <columns>School_College__c</columns>
        <columns>NAME</columns>
        <columns>Applicant_Type__c</columns>
        <columns>Career__c</columns>
        <columns>Academic_Level__c</columns>
        <columns>Degree__c</columns>
        <columns>Degree_Type__c</columns>
        <columns>Program_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Number_of_Applications_Limit__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Program_Record_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Record_Type__c</field>
            <operation>equals</operation>
            <value>Academic Program</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Program__c.Academic_Program</value>
        </filters>
        <label>Academic Programs</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9</booleanFilter>
        <columns>NAME</columns>
        <columns>Degree__c</columns>
        <columns>Career__c</columns>
        <columns>Department__c</columns>
        <columns>Recruitment_Program__c</columns>
        <columns>Program_Code__c</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Program_Record_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>BSN.PABSN</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>ABSN-P</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>BS.CRJ</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>MLIS</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>MEM</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>MEM-P</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>MEM-T</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>MSE</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>LifeC</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Hide_from_Application__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Application_Academic_Programs</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Applicant_Type__c</columns>
        <columns>Generic_Filter_1__c</columns>
        <columns>Opportunity_Credit_Hour_Multiplier__c</columns>
        <columns>Opportunity_Program_Amount__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hide_from_Application__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Program_Record_Type__c</field>
            <operation>equals</operation>
            <value>Academic Program</value>
        </filters>
        <label>Application Academic Programs</label>
    </listViews>
    <listViews>
        <fullName>Missing_Programs</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9</booleanFilter>
        <columns>NAME</columns>
        <columns>Degree__c</columns>
        <columns>Career__c</columns>
        <columns>Department__c</columns>
        <columns>Recruitment_Program__c</columns>
        <columns>Program_Code__c</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Program_Record_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>BSN.PABSN</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>ABSN-P</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>BS.CRJ</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>MLIS</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>MEM</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>MEM-P</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>MEM-T</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>MSE</value>
        </filters>
        <filters>
            <field>Program_Code__c</field>
            <operation>equals</operation>
            <value>BAS.BUS</value>
        </filters>
        <label>Missing Programs</label>
    </listViews>
    <listViews>
        <fullName>Recruitment_Programs</fullName>
        <columns>NAME</columns>
        <columns>Career__c</columns>
        <columns>Department__c</columns>
        <columns>Program_Record_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Record_Type__c</field>
            <operation>equals</operation>
            <value>Recruitment Program</value>
        </filters>
        <label>Recruitment Programs</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <recordTypes>
        <fullName>Academic_Program</fullName>
        <active>true</active>
        <description>The official degree or major a student applies to and is admitted into.</description>
        <label>Academic Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recruitment_Program</fullName>
        <active>true</active>
        <description>The marketing value of a degree or major</description>
        <label>Recruitment Program</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>